# wiki

./: README.md  alembic.ini  mix-manifest.json  package-lock.json  package.json  performance.md  pyproject.toml  serve-gunicorn  serve-uvicorn  tailwind.config.js  uvicore  webpack.mix.js
mreschke/wiki/: __init__.py  providers.py
mreschke/wiki/commands/: db.py  passwd.py  pydantic_config.py  test.py  wiki.py
mreschke/wiki/config/: app.py  database.py  package.py  wiki.py
mreschke/wiki/config/OLD/: app.py  package.py  wiki.py
mreschke/wiki/config/uvicore/: auth.py  foundation.py
mreschke/wiki/database/migrations/: env.py
mreschke/wiki/database/seeders/: __init__.py  format.py  post.py  posts.py  seeders.py  space.py  users.py
mreschke/wiki/database/tables/: __init__.py  formats.py  posts.py  sections.py  spaces.py  topics.py
mreschke/wiki/http/: mix-manifest.json  server.py
mreschke/wiki/http/api/: post.py  user.py
mreschke/wiki/http/assets/js/: app.js
mreschke/wiki/http/controllers/: about.py  home.py
mreschke/wiki/http/controllers/old/: about.py  home.py  starlette.py
mreschke/wiki/http/public/: hot  mix-manifest.json
mreschke/wiki/http/public/assets/wiki/js/: app.js  (+2 more)
mreschke/wiki/http/routes/: api.py  web.py
mreschke/wiki/http/views/wiki/: about.j2  home.j2  layout-tailwind.j2  layout.j2
mreschke/wiki/models/: __init__.py  format.py  post.py  section.py  space.py  topic.py  user.py
mreschke/wiki/overrides/: api_router.py  configuration.py  console.py  logger.py  package.py  provider.py  routes.py  server.py  static.py  templates.py  web_router.py
mreschke/wiki/overrides/services/: console.py  logging.py
mreschke/wiki/services/: bootstrap.py  logging.py  wiki.py
mreschke/wiki/services/framework/: application.py
mreschke/wiki/support/: bootstrap.py
mreschke/wiki/support/overrides/: package.py
tests/: test_wiki.py
(+4 files in other folders)
