[tool.poetry]
name = "mreschke-wiki"
version = "0.1.0"
license = "MIT"
authors = ["Matthew Reschke <mail@mreschke.com>"]
description = "Uvicore Wiki"
readme = "README.md"
include = ["LICENSE"]
packages = [
    { include = "mreschke/wiki" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
uvicore = {path = "../uvicore", develop = true, extras = ["database", "web"]}
pip-licenses = "3.3.*"
Faker = "6.6.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
