[tool.poetry]
name = "mreschke-wiki"
version = "0.1.0"
license = "MIT"
authors = ["Matthew Reschke <mail@mreschke.com>"]
description = "Uvicore Wiki"
readme = "README.md"
include = ["LICENSE"]
packages = [
    { include = "mreschke/wiki" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
uvicore = {path = "../framework", develop = true, extras = ["database", "redis", "web"]}
mreschke-fusionauth = {path = "../fusionauth", develop = true}
Faker = "6.6.*"

[tool.poetry.dev-dependencies]
pip-licenses = "3.3.*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
